--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,11 @@
 .dropdown-toggle,.dropdown-item{
     cursor: pointer;
 }
+
+
+img{
+    max-width: 50px;
+    border:2px solid #fff;
+    display: inline;
+
+}
