--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,14 +1,37 @@
-<form class="form-horizontal" #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm'  class="form-horizontal" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
   <h2 class = "text-center text-primary">Sign up</h2>
   <hr>
+
+  
+  <!-- form inputs goes here -->
   <div class="form-group">
-    <input type="text" class="form-control" name = "username" 
-        [(ngModel)]="model.username" placeholder="Username">
+    <label style="margin-right : 10px;" class="control-label">I am a :</label>
+    <label  class="radio-inline">
+      <input type="radio" value="male" formControlName="gender">Male
+    </label>
+
+    <label  class="radio-inline" >
+      <input type="radio" value="female" formControlName="gender"  class ="ml-3">Female
+    </label>
+
   </div>
-  <div class="form-group">
-    <input type="password" class="form-control" name = "password" 
-        [(ngModel)]="model.password" placeholder="Password">
+  <app-text-input [formControl]='registerForm.controls["username"]'  [label]='"Username"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["knownAs"]'  [label]='"Known AS"'></app-text-input>
+  <app-date-input [formControl]='registerForm.controls["dateOfBirth"]'  [label]='"Date of Birth"' [maxDate]="maxDate"></app-date-input>
+  <app-text-input [formControl]='registerForm.controls["city"]'  [label]='"City"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["country"]'  [label]='"Country"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["password"]'  [label]='"Password"' [type]='"password"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["confirmPassword"]'  [label]='"confirmPassword"'  [type]='"password"'></app-text-input>
+
+  <div class="row" *ngIf="validationErrors.length>0">
+    <ul class= "text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{error}}
+      </li>
+    </ul>
   </div>
+
+
   <div class="form-group text-center">
     <div class="container">
       <h5>register your voice here</h5>
@@ -19,8 +42,11 @@
         <source [src]="sanitize(url)" type="audio/wav">
       </audio>
     </div>
-    <button class="btn btn-success mr-2" type = "submit">Register</button>
+    <button [disabled]='!registerForm.valid' class="btn btn-success mr-2" type = "submit">Register</button>
     <button class="btn btn-default mr-2" style="background-color: rgb(245, 164, 110);" (click) ="cancel()" type = "submit">Cancel</button>
 
   </div>
 </form>
+
+<!-- <p>Form values:{{registerForm.value | json}}</p>
+<p>Form status: {{registerForm.status|json}}</p> -->
