End of serction 13

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -7,11 +7,11 @@
   <div class="form-group">
     <label style="margin-right : 10px;" class="control-label">I am a :</label>
     <label  class="radio-inline">
-      <input type="radio" value="male" formControlName="gender">Male
+      <input type="radio" class="mr-2" value="male" formControlName="gender">Male
     </label>
 
     <label  class="radio-inline" >
-      <input type="radio" value="female" formControlName="gender"  class ="ml-3">Female
+      <input type="radio" value="female" formControlName="gender"  style="margin-left: 10px;">Female
     </label>
 
   </div>
