--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark  bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" routerLink='/'>Dating App</a>
 
@@ -17,13 +17,11 @@
         <li class="nav-item">
           <a class="nav-link " routerLink='/errors' routerLinkActive='active' >TestErrors</a>
         </li>
-        
-
       </ul>
 
       
       <div class="dropdown" *ngIf="accountService.currentUser$ | async as user" dropdown>
-        <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
+        <img src="{{user.photoUrl || './assets/user.png'}}" style="margin-right: 10px;" alt="{{user.username}}">
         <a class = "dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.username | titlecase}} </a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
@@ -35,21 +33,22 @@
         <input
         name="username"
         [(ngModel)]="model.username"
-        class="form-control me-2" 
+        class="form-control-sm" 
         type="text" 
         placeholder="Username" >
         <input 
-        class="form-control me-2" 
+        class="form-control-sm" 
         name = "password"
         [(ngModel)]="model.password"
         type="password" 
         placeholder="Password" >
-        <button class="btn btn-success" type="submit">Login</button>
-        <button  (click)="initiateRecording()" class="btn btn-outline-info" *ngIf="!recording" style="cursor: pointer;background-color: green;color: white;"> start recording </button>
+        <button class="btn btn-success" type="submit" style="margin-right: 4px; margin-left: 4px;">Login</button>
+        <button  (click)="initiateRecording()" class="btn btn-outline-info" *ngIf="!recording" style="cursor: pointer;background-color: green;color: white; "> start recording </button>
         <button (click)="stopRecording()" class="btn btn-outline-info" *ngIf="recording" style="cursor: pointer;background-color: red;color: white;"> Stop Recording </button>
-        <audio controls="" *ngIf="url" >
+        <p *ngIf="url" style="color: aliceblue;"> press login</p>
+        <!-- <audio controls="" *ngIf="url" >
           <source [src]="sanitize(url)" type="audio/wav">
-        </audio>
+        </audio> -->
       </form>
     </div>
 </nav>
