--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -6,25 +6,26 @@
   <form #form="ngForm" class="row row-cols-lg-auto g-3 align-items-center" (ngSubmit)="loadMembers()"
     autocomplete="off">
 
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label>Age from :</label>
       <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" [(ngModel)]="userParams.minAge">
     </div>
 
 
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label>Age to :</label>
       <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" [(ngModel)]="userParams.maxAge">
     </div>
 
-    <div class="form-group" px-2>
-      <label>Show :</label>
-      <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
+    <div class="form-group mb-3" >
+      <label>Gender:</label>
+      <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-select">
         <option *ngFor="let gender of genderList" [value]="gender.value">
           {{gender.display}}
         </option>
       </select>
     </div>
+
 
     <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
     <button (click)="resetFilters()" class="btn btn-info ml-1">Reset Filters</button>
