--- a/client/src/app/members/messages/messages.component.html
+++ b/client/src/app/members/messages/messages.component.html
@@ -27,7 +27,7 @@
       <th style="width: 20%;">Sent</th>
       <th style="width: 20%;"></th>
     </tr>
-    <tr [hidden]="laoding" *ngFor="let message of messages" 
+    <tr [hidden]="loading" *ngFor="let message of messages" 
     routerLink='{{container ==="Outbox"
       ?"/members"+ message.recipientUsername
       :"/members" +message.senderUsername}}'
@@ -61,9 +61,17 @@
   </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination && !loading">
-  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
-    [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
+<div class="d-flex justify-content-center" *ngIf="pagination ">
+  <pagination 
+  [boundaryLinks]="true" 
+  [totalItems]="pagination.totalItems" 
+  [itemsPerPage]="pagination.itemsPerPage"
+  [(ngModel)]="pagination.currentPage" 
+  autoHide="true"
+  responsive="true"
+  (pageChanged)="pageChanged($event)" 
+  (pageBoundsCorrection)="pageChanged($event)"
+  previousText="&lsaquo;" nextText="&rsaquo;"
     firstText="&laquo;" lastText="&raquo;">
 
   </pagination>
